--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div class="col-lg-10 justify-content-center">
                 <div class="row flex-lg-row-reverse align-items-center px-4 mb-5 pt-3">
                     <div class=" col-sm-8 col-lg-6">
-                        <img src="../Media/burger.png" class="d-block mx-lg-auto img-fluid" alt="Burger de Pollo" width="700" height="500" loading="lazy">
+                        <img src="./Media/burger.png" class="d-block mx-lg-auto img-fluid" alt="Burger de Pollo" width="700" height="500" loading="lazy">
                     </div>
                     <div class="col gx-3 gy-lg-5">
                         <div class="header-principal">LA MEJOR HAMBURGUESA <br> DE POLLO DE <span style="color: red;">ESPAÑA</span> </div>
