--- a/Codigo/Entradas.html
+++ b/Codigo/Entradas.html
@@ -2,22 +2,23 @@
 <html>
 
 <head>
-    <title>Contacto</title>
+    <title>Entradas</title>
+    <meta name="Entradas Burger" content="Lista de entradas que se sirven en el restaurante burger burger">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/EntradasStyle.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 </head>
 
 <body>
     <div class="container-fluid text-left">
-
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
                 <a class="navbar-brand" href="index.html">BURGUER BURGUER</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
+            <span class="navbar-toggler-icon"></span>
+          </button>
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
@@ -33,42 +34,51 @@
                 </div>
             </div>
         </nav>
-
-        <div class="container-fluid mx-lg-3 mx-sm-2">
-            <div class="row d-flex justify-content-center pt-3 mt-4 mx-lg-5 mx-sm-2">
-                <div class="col-lg-5 col-sm-12  gy-lg-3 gy-sm-0 my-lg-5 my-sm-0">
-                    <img src="https://s.hdnux.com/photos/01/30/04/10/23085580/3/rawImage.jpg" alt="Imagen de restaurante" class="d-block mx-lg-auto img-fluid" alt="Imagen restaurante" width="700" height="500">
-                </div>
-                <div class="col-lg-5 col-sm-12 gy-lg-3 gy-sm-0 my-lg-5 mt-sm-0 mb-sm-4" style="background-color: rgb(24, 24, 24); color: rgb(255, 255, 255);">
-
-                    <div class="row pt-5 pb-3 px-3">
-                        <div class="titulo-info" style="color: red;">Contacto</div>
-                    </div>
-                    <div class="row py-2 px-3">
-                        <div class="col-1 d-flex align-items-center"><span class="material-symbols-outlined">
-                            call
-                            </span>
-                        </div>
-                        <div class="col gx-lg-0 gx-sm-2 d-flex align-items-center info"> +34 258963587</div>
-                    </div>
-                    <div class="row py-2 px-3">
-                        <div class="col-1 d-flex align-items-center"><span class="material-symbols-outlined">
-                            mail
-                            </span></div>
-                        <div class="col gx-lg-0 gx-sm-2 d-flex align-items-center info">info@restauranteinventado.es</div>
-                    </div>
-                    <div class="row py-2 px-3  direccion">
-                        <div class="col-1 d-flex align-items-center"><span class="material-symbols-outlined">
-                            home
-                            </span></div>
-                        <div class="col gx-lg-0 gx-sm-2 d-flex align-items-center info info-direccion">Avenida de Los Desarrolladores 654, 08025, Javarcelona, España</div>
-                    </div>
-
-                </div>
+        <main>
+            <div class="item banner-lat">
+                <h4>Entradas</h4>
+                <p class="parrafo">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos consequuntur quo.</p>
             </div>
-        </div>
+
+            <div class="item papalatas"></div>
+            <div class="item texto-plato1">
+                <h5>Papalatas</h5>
+                <p>Patatas en una lata, así de simple. Patatas rústicas, guacamole, tomate, crema agria y Enquésame 🔥.</p>
+                <h3>$ 10.00</h3>
+            </div>
+
+            <div class="item sanahoria"></div>
+            <div class="item texto-plato2">
+                <h5>Sana Horia</h5>
+
+                <p>Mézclum, queso de cabra, pimientos asados, cebolla morada, guacamole, crujientes de zanahoria y semillas de superalimentos.</p>
+                <h3>$ 10.00</h3>
+            </div>
+
+            <div class="item terichicken"></div>
+            <div class="item texto-plato3">
+                <h5>Terichicken</h5>
+                <p>Pollo marinado a la plancha, vegetales a la plancha, espinacas, semillas de sésamo y salsa teriyaki.</p>
+                <h3>$ 10.00</h3>
+            </div>
+
+            <div class="item empanadas"></div>
+            <div class="item texto-plato4">
+                <h5>Empanadas</h5>
+                <p>Exquisita mezcla de tres quesos y tiernos granos de choclo nacional.</p>
+                <h3>$ 10.00</h3>
+            </div>
+
+            <div class="item ensalada-simple"></div>
+            <div class="item texto-plato5">
+                <h5>Ensalasa Simple</h5>
+                <p>Mix de Lechugas acompañado de Queso fresco, Tomate Cherry, Huevo, Pechuga de Pollo, Palta, Tocino, Choclitos y Rico aderezo de Mostaza Miel.</p>
+                <h3>$ 10.00</h3>
+            </div>
 
 
+
+        </main>
         <div class="row py-4" style="background-color: rgb(24, 24, 24); color: rgb(224, 0, 0);">
             <div class="col">
                 <div class="row py-2"></div>
