--- a/Codigo/Menu.html
+++ b/Codigo/Menu.html
@@ -2,11 +2,13 @@
 <html>
 
 <head>
-    <title>Entradas</title>
+    <title>Menu</title>
+    <meta name="Menu" content="Lista de tipos de platillos que puedes consumir en Burger Burger, entradas, platos de fondo, tapas, postres, bebidas">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+    <link rel="stylesheet" href="./css/MenuStyle.css">
 </head>
 
 <body>
@@ -33,35 +35,33 @@
             </div>
         </nav>
         <main>
-            <div class="text">
-                <h4>Entradas</h4>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos consequuntur quo.</p>
+            <div class="item banner-lat">
+                <div class="textos">
+                    <div class="titulo-pag">MENÚ</div>
+                    <div class="parrafo">
+                        <p>Descubre todas nuestras deliciosas opciones eligiendo entre las categorías que tenemos</p>
+                    </div>
+                </div>
             </div>
-            <div class="gallery">
-                <div class="Plato">
-                    <img src="" alt="Imagen comida 1">
-                    <h5>Comida 1</h5>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam, id doloremque? Ullam quae optio, facilis mollitia sequi perferendis nihil.</p>
-                </div>
-                <div class="Plato">
-                    <img src="" alt="Imagen comida 1">
-                    <h5>Comida 1</h5>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam, id doloremque? Ullam quae optio, facilis mollitia sequi perferendis nihil.</p>
-                </div>
-                <div class="Plato">
-                    <img src="" alt="Imagen comida 1">
-                    <h5>Comida 1</h5>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam, id doloremque? Ullam quae optio, facilis mollitia sequi perferendis nihil.</p>
-                </div>
-                <div class="Plato">
-                    <img src="" alt="Imagen comida 1">
-                    <h5>Comida 1</h5>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam, id doloremque? Ullam quae optio, facilis mollitia sequi perferendis nihil.</p>
-                </div>
 
-            </div>
+            <a href="Entradas.html" class="item entradas">
+                <span>ENTRADAS</span>
+            </a>
+
+            <a href="Entradas.html" class="item tapas">
+                <span>PLATOS DE FONDO</span>
+            </a>
+            <a href="Entradas.html" class="item platos-fondo">
+                <span>TAPAS</span>
+            </a>
+            <a href="Entradas.html" class="item bebidas">
+                <span>BEBIDAS SIN ALCOHOL</span>
+            </a>
+            <a href="Entradas.html" class="item postres">
+                <span>POSTRES</span>
+            </a>
         </main>
-        <div class="row py-4" style="background-color: rgb(24, 24, 24); color: rgb(224, 0, 0);">
+        <div class="row py-4 fixed-bottom" style="background-color: rgb(24, 24, 24); color: rgb(224, 0, 0);">
             <div class="col">
                 <div class="row py-2"></div>
                 <div class="row text-center d-flex justify-content-center align-items-center">
@@ -70,8 +70,8 @@
                     <div class="col ">
                         <a href="us.html">Sobre Nosotros</a>
                     </div>
-                    <div class="col">
-                        <a class="nav-link disabled" href="contacto.html">Contacto</a>
+                    <div class="col ">
+                        <a href="contacto.html">Contacto</a>
                     </div>
                     <div class="col "></div>
                 </div>
