--- a/Codigo/index.html
+++ b/Codigo/index.html
@@ -2,22 +2,22 @@
 <html>
 
 <head>
-    <title>Menu</title>
+    <title>BURGER BURGER</title>
+    <meta name="Hamburguesería Burger Burger" content="Restaurante burger burger, donde se sirve la mejor hamburguesa de pollo de toda españa">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
-    <link rel="stylesheet" href="MenuStyle.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
-<body>
+
+<body style="background-color: rgb(245, 245, 245);">
     <div class="container-fluid text-left">
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
                 <a class="navbar-brand" href="index.html">BURGUER BURGUER</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
+                <span class="navbar-toggler-icon"></span>
+              </button>
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
@@ -33,35 +33,25 @@
                 </div>
             </div>
         </nav>
-        <main>
-            <div class="item uno">
-                <div class="textos">
-                    <div class="titulo-pag">MENÚ</div>
-                    <div class="parrafo">
-                        <p>Descubre todas nuestras deliciosas opciones eligiendo entre las categorías que tenemos</p>
+        <div class="row ">
+            <div class="col-1"></div>
+            <div class="col-lg-10 justify-content-center">
+                <div class="row flex-lg-row-reverse align-items-center px-4 mb-5 pt-3">
+                    <div class=" col-sm-8 col-lg-6">
+                        <img src="../Media/burger.png" class="d-block mx-lg-auto img-fluid" alt="Burger de Pollo" width="700" height="500" loading="lazy">
+                    </div>
+                    <div class="col gx-3 gy-lg-5">
+                        <div class="header-principal">LA MEJOR HAMBURGUESA <br> DE POLLO DE <span style="color: red;">ESPAÑA</span> </div>
+                        <p class="lead" style="font-family: 'Helvetica';">Prueba nuestra nueva receta con pollo frito al estilo Kentucky, extra queso suizo y nuestra salsa especial secreta</p>
+                        <div class="d-grid gap-2 d-md-flex justify-content-md-start">
+                            <button type="button" class="btn btn-dark btn-lg px-4 me-md-2"> <a href="./Menu.html">VER MENÚ</a></button>
+                            <button type="button" class="btn btn-outline-secondary btn-lg px-4"><a href="./contacto.html">ESCRÍBENOS</a></button>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="item dos">
-                <span>ENTRADAS</span>
-            </div>
-            <div class="item cuatro">
-                <span>TAPAS</span>
-            </div>
-            <div class="item tres">
-                <span>PLATOS DE FONDO</span>
-            </div>
-            <div class="item cinco">
-                <span>BEBIDAS SIN ALCOHOL</span>
-            </div>
-            <div class="item seis">
-                <span>BEBIDAS ALCOHOLICAS</span>
-            </div>
-            <div class="item seis">
-                <span>POSTRES</span>
-            </div>
-        </main>
-        <div class="row py-4 fixed-bottom" style="background-color: rgb(24, 24, 24); color: rgb(224, 0, 0);">
+        </div>
+        <div class="row py-4" style="background-color: rgb(24, 24, 24); color: rgb(224, 0, 0);">
             <div class="col">
                 <div class="row py-2"></div>
                 <div class="row text-center d-flex justify-content-center align-items-center">
@@ -85,6 +75,10 @@
             </div>
         </div>
     </div>
+
+
+
+
 </body>
 
 </html>
