--- a/Codigo/index.html
+++ b/Codigo/index.html
@@ -3,7 +3,8 @@
 
 <head>
     <title>BURGER BURGER</title>
-    <meta name="Hamburguesería Burger Burger" content="Restaurante burger burger, donde se sirve la mejor hamburguesa de pollo de toda españa">
+    <meta name="Description" content="Restaurante burger burger, donde se sirve la mejor hamburguesa de pollo de toda españa">
+    <meta name="Keywords" content="Landing restaurante BurgerBurger">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./css/style.css">
@@ -37,7 +38,7 @@
             <div class="col-1"></div>
             <div class="col-lg-10 justify-content-center">
                 <div class="row flex-lg-row-reverse align-items-center px-4 mb-5 pt-3">
-                    <div class=" col-sm-8 col-lg-6">
+                    <div class="mx-sm-2 col-sm-10 col-lg-6 col-md-8">
                         <img src="../Media/burger.png" class="d-block mx-lg-auto img-fluid" alt="Burger de Pollo" width="700" height="500" loading="lazy">
                     </div>
                     <div class="col gx-3 gy-lg-5">
