--- a/Codigo/us.html
+++ b/Codigo/us.html
@@ -3,7 +3,8 @@
 
 <head>
     <title>Sobre nosotros</title>
-    <meta name="Nosotros" content="información sobre la cadena de Hamburgueserías Burger Burger, su historia de creación y sobre los dueños">
+    <meta name="Description" content="información sobre la cadena de Hamburgueserías Burger Burger, su historia de creación y sobre los dueños">
+    <meta name="Keywords" content="Historia BurgerBurger familia restaurante">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./css/style.css">
